reverted unneeded changes to ant examples