@@ -30,7 +30,7 @@
   <property name="instrumented.classes.dir" location="${build.dir}/instrumented-classes" />
   <property name="build.test.classes.dir" location="${build.dir}/tests" />
 
-  <property name="gzoltar.version" value="1.7.4-SNAPSHOT" />
+  <property name="gzoltar.version" value="1.7.3" />
   <property name="gzoltar.report.dir" location="${build.dir}/gzoltar" />
   <property name="gzoltar.exec.file" location="${build.dir}/gzoltar.exec" />
 
@@ -58,7 +58,7 @@
 
   <target name="compile" depends="install-deps">
     <mkdir dir="${build.classes.dir}" />
-    <javac source="19" target="19"
+    <javac source="1.6" target="1.6"
            srcdir="${src.dir}"
            destdir="${build.classes.dir}"
            debug="true"
@@ -68,7 +68,7 @@
     </javac>
 
     <mkdir dir="${build.test.classes.dir}" />
-    <javac source="19" target="19"
+    <javac source="1.6" target="1.6"
            srcdir="${tests.dir}"
            destdir="${build.test.classes.dir}">
       <classpath>
@@ -129,6 +129,7 @@
             <pathelement path="${gzoltar-agent-rt.jar}" />
             <pathelement path="${gzoltar-cli.jar}" />
         </classpath>
+        <jvmArg value="-XX:MaxPermSize=2048M" />
         <jvmArg value="-Dgzoltar-agent.destfile=${gzoltar.exec.file}" />
         <jvmArg value="-Dgzoltar-agent.output=file" />
         <arg value="runTestMethods" />
